@@ -248,16 +248,34 @@ MultiMatch::add_next_sub_mset(SingleMatch * leaf,
 	if(msettermfreqandwts->size() == 0) {
 	    *msettermfreqandwts = *sub_msettermfreqandwts;
 	} else {
-#ifdef MUS_DEBUG_PARANOID
-	    AssertParanoid(msettermfreqandwts->size() ==
-			   sub_msettermfreqandwts->size());
-	    std::map<om_termname, OmMSet::TermFreqAndWeight>::const_iterator i;
+	    std::map<om_termname, OmMSet::TermFreqAndWeight>::iterator i;
 	    std::map<om_termname, OmMSet::TermFreqAndWeight>::const_iterator j;
 	    for (i = msettermfreqandwts->begin(),
 		 j = sub_msettermfreqandwts->begin();
 		 i != msettermfreqandwts->end() &&
 		 j != sub_msettermfreqandwts->end();
 		 i++, j++) {
+		if(i->second.termweight == 0) {
+		    i->second.termweight = j->second.termweight;
+		}
+	    }
+
+#ifdef MUS_DEBUG_PARANOID
+	    AssertParanoid(msettermfreqandwts->size() ==
+			   sub_msettermfreqandwts->size());
+	    for (i = msettermfreqandwts->begin(),
+		 j = sub_msettermfreqandwts->begin();
+		 i != msettermfreqandwts->end() &&
+		 j != sub_msettermfreqandwts->end();
+		 i++, j++) {
+		DebugMsg("Comparing " <<
+			 i->first << "," <<
+			 i->second.termfreq << "," <<
+			 i->second.termweight << " with " <<
+			 j->first << "," <<
+			 j->second.termfreq << "," <<
+			 j->second.termweight);
+
 		AssertParanoid(i->first == j->first);
 		AssertParanoid(i->second.termfreq == j->second.termfreq);
 		AssertParanoid(i->second.termweight == j->second.termweight);
